# slide

./: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
slide/: slide.h
tests/: test.cpp
